# MCSys

./: .gitignore  readme.md  todo.md
Serial2_test/: .mxproject  Makefile  Serial2_test.ioc  compile_commands.json  openocd.cfg
Serial2_test/Core/Inc/: log.h  main.h  stm32f4xx_it.h  uart2_comm.h
Serial2_test/Core/Src/: dma.c  (+8 more)
camcap/: camcap.py
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: App.vue
lidar/lidar_test/: Cargo.toml
lidar/lidar_test_cpp/: CMakeLists.txt  compile_commands.json
lidar/lidar_test_cpp/.cache/clangd/index/: LakiBeamHTTP.cpp.769B3B7AE5E88F24.idx  LakiBeamUDP.cpp.5DA74C210E11A823.idx  main.cpp.5713BF2EFEFCE701.idx  opengl_test.cpp.3B858E598DF95E44.idx
lidar/lidar_test_cpp/inc/test/: lidar_test.h  opengl_test.h
lidar/lidar_test_cpp/inc/utils/: Encode_binary.h
lidar/lidar_test_cpp/inc/ws/: ws_server.h  ws_session.h  ws_types.h
lidar/lidar_test_cpp/src/: main.cpp
lidar/lidar_test_cpp/src/sdk/: LakiBeamHTTP.cpp  LakiBeamUDP.cpp
lidar/lidar_test_cpp/src/test/: opengl_test.cpp  test_lidar.cpp
lidar/lidar_test_cpp/src/utils/: Encode_binary.cpp
lidar/lidar_test_cpp/src/ws/: ws_server.cpp  ws_session.cpp
lidar/opengl_test/: a.out  test.cpp
notes/: dev_board_network_problem.md  opt.md  readme.md  use_hal_lib_and_cubemx_at_river.md
refs/板载IC数据手册/: 0如何获取IC手册和封装.txt
reports/: .~25067040孙帅康-微机大作业.docx  S325067040孙帅康-微机大作业.docx  S325067092胡临天-微机大作业.docx  main.tex  readme.md
reports/complete_report/: readme.md
reports/demo_report_f/: Makefile  main.tex  readme.md  structure.tex
reports/expolor_compiler/: readme.md
reports/proj_proposal/: readme.md  面向视障导航的智能反馈系统.pptx
reports/research/: tvm.md
reports/slide/: slide.typ
(+153 files in other folders)
